--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Forms</title>
 </head>
 <body> 
-    <h1>Coding Iterview</h1>
+    <h1>Coding Interview</h1>
     <h2>Initial Stage</h2>
     <!--Working With Forms-->
 
@@ -21,11 +21,9 @@
             required="required" /> 
            <input type="submit" value="Submit" />
     <p>Select your Gender: <br>
-        <input id="female" type="radio" name="gender"
-        value="f">
+        <input id="female" type="radio" name="gender">
         <label for="female">Female</label>
-        <input id="male" type="radio" name="gender" 
-       value="m">
+        <input id="male" type="radio" name="gender" checked="checked">
         <label for="male">Male</label>
     </p>
     <p>Enter your age
@@ -94,9 +92,13 @@
   placeholder="Enter Query" />
    <input type="submit" value="Search" />
 </fieldset>
-  
+<br><br>
+<fieldset>
+    <legend>Form filling method</legend>
+<p>Here's a tutorial video to fill a form:</p><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/taFQQFZsDRU?si=2giF0WAh14bq47zB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</fieldset>
 </form>
-
 
 </body>
 </html>
